Bug 122491 - Classification: dialog (Paragraph) Classification doesn't show previously chosen classification
Summary: Classification: dialog (Paragraph) Classification doesn't show previously cho...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.1.0.1 rc
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.0 target:6.4.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Classification Regressions-Dialog-Tunneling
  Show dependency treegraph
 
Reported: 2019-01-04 18:19 UTC by Cor Nouws
Modified: 2020-04-21 16:16 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
file from 607.2 with classification (12.10 KB, application/vnd.oasis.opendocument.text)
2019-01-04 18:25 UTC, Cor Nouws
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2019-01-04 18:19:44 UTC
- new Writer document
- View > Toolbars > Classification
- choose e.g. General Business from list box (or in dialiog... OK)
  > now document header shows "General Business"
- open dialog Classification from the toolbar
  > neither field Content, nor the lists Classification and International show the already chosen classification.
  it should however.

Noticed in Version: 6.2.0.1
Build ID: 0412ee99e862f384c1106d0841a950c4cfaa9df1
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: nl-NL (nl_NL.UTF-8); UI-Language: en-US
Calc: threaded

and in Versie: 6.1.0.1
Build ID: 378e26bd4f22a135cef5fa17afd5d4171d8da21a
CPU-threads: 4; Besturingssysteem: Linux 4.15; UI-render: standaard; VCL: gtk2; 
Locale: nl-NL (nl_NL.UTF-8); Calc: group threaded
Comment 1 Cor Nouws 2019-01-04 18:20:27 UTC
was ok in Versie: 6.0.7.2
Build ID: 78c12ce5f2b8960f18b204a7ea82f971769f1679
CPU-threads: 4; Besturingssysteem: Linux 4.15; UI-render: standaard; VCL: gtk2; 
Locale: nl-NL (nl_NL.UTF-8); Calc: group
Comment 2 Cor Nouws 2019-01-04 18:25:44 UTC
Created attachment 148041 [details]
file from 607.2 with classification

added test file from previous LibreOffice.
Opening in 6.1.x etc. doesn't show the already chosen classification too, so the defect likely is not because of the file content
Comment 3 Cor Nouws 2019-01-04 18:27:56 UTC
(In reply to Cor Nouws from comment #2)

> Opening in 6.1.x etc. doesn't show the already chosen classification too, so
> the defect likely is not because of the file content
the other way round, file from newer version in 607.2, does work correct
Comment 4 Durgapriyanka 2019-01-04 22:33:01 UTC
Thank you for reporting the bug. I can confirm this with

Version: 6.3.0.0.alpha0+
Build ID: 3c964980da07892a02d5ac721d80558c459532d0
CPU threads: 2; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-12-12_02:07:45
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
Comment 5 raal 2019-01-05 08:15:25 UTC
This seems to have begun at the below commit.
Adding Cc: to Henry Castro ; Could you possibly take a look at this one?
Thanks
 75d62764b6864ba8fc13b82da7fa48ebc21bc573 is the first bad commit
commit 75d62764b6864ba8fc13b82da7fa48ebc21bc573
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Mon Mar 5 20:27:30 2018 +0100

    source 3e8d1e80d81999d2c5e160b756491a847226d423

author	Henry Castro <hcastro@collabora.com>	2018-03-05 09:03:10 -0400
committer	Henry Castro <hcastro@collabora.com>	2018-03-05 20:23:48 +0100
commit 3e8d1e80d81999d2c5e160b756491a847226d423 (patch)
tree 1e67f3116248dc9211b6199e83e24c8ba829a678
parent c92af727f70b0ccc16450bb340f9bff713a42ce1 (diff)
lokdialog: more, convert the dialog to async exec
ClassificationDialog
SwWatermarkDialog
Comment 6 Xisco Faulí 2020-04-14 10:53:36 UTC
@Caolán, I thought you might be interested in this issue
Comment 7 Caolán McNamara 2020-04-15 14:31:02 UTC
using runAsync means the overridden run that setup those defaults is no longer called
Comment 8 Commit Notification 2020-04-16 07:42:32 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5d663bcb1dde4b8aeaa7b593a54099f7fad90c08

Resolves: tdf#122491 ClassificationDialog::run() is not called

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2020-04-16 07:45:26 UTC
fixed in master, backport to 6-4 in gerrit
Comment 10 Commit Notification 2020-04-16 10:44:58 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/53e3446dd29cb74642800124a372d696f19a6828

Resolves: tdf#122491 ClassificationDialog::run() is not called

It will be available in 6.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Xisco Faulí 2020-04-21 16:16:52 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: 850b8de31c5be5127eac16a4f5cc18c26a582e53
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!