Resolves: tdf#122491 ClassificationDialog::run() is not called

when using DialogController::runAsync so the custom override
isn't called so the special setup and save-on-ok aren't called.

move the setup into the ctor seeing as the dialog is only run once
after ctoring and add a OK handling that does the on-ok setting save

Change-Id: I8183fc4b0f5de2844562c971c86d655f2d4920ff