svx/source/dialog/ClassificationDialog.cxx
@@ -178,6 +178,7 @@ ClassificationDialog::ClassificationDialog(weld::Window* pParent, const bool bPe
     , m_xEditWindow(new ClassificationEditView)
     , m_xEditWindowWeld(new weld::CustomWeld(*m_xBuilder, "classificationEditWindow", *m_xEditWindow))
 {
+    m_xOkButton->connect_clicked(LINK(this, ClassificationDialog, OkHdl));
     m_xSignButton->connect_clicked(LINK(this, ClassificationDialog, ButtonClicked));
     m_xSignButton->set_visible(m_bPerParagraph);
 
@@ -242,23 +243,7 @@ ClassificationDialog::ClassificationDialog(weld::Window* pParent, const bool bPe
         m_nAsyncExpandEvent = nullptr;
 
     m_xEditWindow->SetModifyHdl(LINK(this, ClassificationDialog, EditWindowModifiedHdl));
-}
 
-//do it async so gtk has a chance to shrink it to best size, otherwise its larger than min
-IMPL_LINK_NOARG(ClassificationDialog, OnAsyncExpandHdl, void*, void)
-{
-    m_nAsyncExpandEvent = nullptr;
-    m_xIntellectualPropertyExpander->set_expanded(true);
-}
-
-ClassificationDialog::~ClassificationDialog()
-{
-    if (m_nAsyncExpandEvent)
-        Application::RemoveUserEvent(m_nAsyncExpandEvent);
-}
-
-short ClassificationDialog::run()
-{
     readRecentlyUsed();
     readIn(m_aInitialValues);
 
@@ -278,13 +263,19 @@ short ClassificationDialog::run()
             m_xRecentlyUsedListBox->append_text(rDescription);
         }
     }
+}
 
-    short nResult = GenericDialogController::run();
-    if (nResult == RET_OK)
-    {
-        writeRecentlyUsed();
-    }
-    return nResult;
+//do it async so gtk has a chance to shrink it to best size, otherwise its larger than min
+IMPL_LINK_NOARG(ClassificationDialog, OnAsyncExpandHdl, void*, void)
+{
+    m_nAsyncExpandEvent = nullptr;
+    m_xIntellectualPropertyExpander->set_expanded(true);
+}
+
+ClassificationDialog::~ClassificationDialog()
+{
+    if (m_nAsyncExpandEvent)
+        Application::RemoveUserEvent(m_nAsyncExpandEvent);
 }
 
 void ClassificationDialog::insertCategoryField(sal_Int32 nID)
@@ -671,6 +662,12 @@ IMPL_LINK(ClassificationDialog, ButtonClicked, weld::Button&, rButton, void)
         const OUString sString = m_xIntellectualPropertyPartEdit->get_text();
         insertField(ClassificationType::INTELLECTUAL_PROPERTY_PART, sString, sString);
     }
+}
+
+IMPL_LINK_NOARG(ClassificationDialog, OkHdl, weld::Button&, void)
+{
+    writeRecentlyUsed();
+    m_xDialog->response(RET_OK);
 }
 
 IMPL_LINK_NOARG(ClassificationDialog, SelectToolboxHdl, weld::ToggleButton&, void)
